feat: add artists resource
