# doc/api.yaml
@@ -100,7 +100,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Album'
-        tracks:
+        track:
           type: array
           items:
             $ref: '#/components/schemas/Track'
@@ -334,7 +334,7 @@ paths:
           $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
-  /tracks:
+  /track:
     get:
       tags:
         - Track
@@ -388,7 +388,7 @@ paths:
           description: Bad request. body does not contain required fields
         401:
           $ref: '#/components/responses/UnauthorizedError'
-  /tracks/{id}:
+  /track/{id}:
     parameters:
       - name: id
         in: path
