# src/recources/tracks/tracks.controller.ts
@@ -1,34 +1,40 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import { Controller, Get, Post, Body, Put, Param, Delete, HttpCode } from '@nestjs/common';
 import { TracksService } from './tracks.service';
 import { CreateTrackDto } from './dto/create-track.dto';
 import { UpdateTrackDto } from './dto/update-track.dto';
+import { Track } from './entities/track.entity';
 
-@Controller('tracks')
+@Controller('track')
 export class TracksController {
   constructor(private readonly tracksService: TracksService) {}
 
-  @Post()
-  create(@Body() createTrackDto: CreateTrackDto) {
-    return this.tracksService.create(createTrackDto);
-  }
-
   @Get()
-  findAll() {
+  @HttpCode(200)
+  findAll(): Track[] {
     return this.tracksService.findAll();
   }
 
   @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.tracksService.findOne(+id);
+  @HttpCode(200)
+  findOne(@Param('id') id: string): Track {
+    return this.tracksService.findOne(id);
   }
 
-  @Patch(':id')
-  update(@Param('id') id: string, @Body() updateTrackDto: UpdateTrackDto) {
-    return this.tracksService.update(+id, updateTrackDto);
+  @Post()
+  @HttpCode(201)
+  create(@Body() createTrackDto: CreateTrackDto): Track {
+    return this.tracksService.create(createTrackDto);
+  }
+
+  @Put(':id')
+  @HttpCode(200)
+  update(@Param('id') id: string, @Body() updateTrackDto: UpdateTrackDto): Track {
+    return this.tracksService.update(id, updateTrackDto);
   }
 
   @Delete(':id')
+  @HttpCode(204)
   remove(@Param('id') id: string) {
-    return this.tracksService.remove(+id);
+    this.tracksService.remove(id);
   }
 }
